add: add login flow, and fix java to talk with frontend and python