@@ -6,7 +6,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -16,7 +15,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
 @Configuration
 @EnableWebSecurity
@@ -24,9 +24,9 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
 
-    // Busca a lista de origens permitidas que você configurou no seu application.properties
+    // Puxa do application.properties as URLs permitidas (Localhost ou domínio final no Railway)
     @Value("${app.cors.allowed-origins}")
-    private List<String> allowedOrigins;
+    private String allowedOrigins;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthFilter) {
         this.jwtAuthFilter = jwtAuthFilter;
@@ -35,38 +35,37 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Ativa a nossa configuração personalizada de CORS antes dos filtros de segurança
+                // 1. Aplica as regras de CORS (Conversa com o React)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Disable CSRF since the application uses stateless JWT tokens
-                .csrf(AbstractHttpConfigurer::disable)
+                // 2. Desativa CSRF porque não usamos Cookies/Sessão (usamos tokens JWT guardados no LocalStorage)
+                .csrf(csrf -> csrf.disable())
 
-                // Set route access permissions
-                // There is no securityFilterChain method within your SecurityConfig.java file:
+                // 3. Define que nossa API é 100% Stateless (Não guarda estado no servidor)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 4. Mapeamento de quais caminhos são livres e quais são protegidos
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/auth/**").permitAll()             // Public login/registration endpoints
-                        .requestMatchers("/api/v1/videos/internal/**").permitAll()  // Released for Python (Validation is done via token in the controller header)
-                        .anyRequest().authenticated()                              // Everything else in SaaS requires JWT login.
+                        .requestMatchers("/api/v1/auth/**").permitAll()             // Cadastro, Login Tradicional e Google livres
+                        .requestMatchers("/api/v1/videos/internal/**").permitAll()  // Callback do Python livre (validado via token no header)
+                        .anyRequest().authenticated()                              // Qualquer outra rota do sistema exige JWT válido
                 )
 
-                // Set session policy to STATELESS
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // Register the custom JWT filter before the standard authentication filter
+                // 5. Encapsula o nosso filtro customizado de JWT antes do validador padrão do Spring
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // Bean responsável por ditar as regras de quais domínios externos podem acessar sua API
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(allowedOrigins);
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+
+        // Converte a string separada por vírgulas em uma lista de origens reais
+        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Internal-Key"));
+        configuration.setExposedHeaders(Collections.singletonList("Authorization"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -76,6 +75,7 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(); // Strong password hashing for PostgreSQL storage
+        // Define o BCrypt como o motor de Hashing das senhas de usuários
+        return new BCryptPasswordEncoder();
     }
 }
